deployed_apps/paulao-2/base/paulao-2-deployment.yaml
---
# create deployment for paulao-2
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: paulao-2
  namespace: paulao-2
  labels:
    app: paulao-2
    version: 0.0.1
    backstage.io/kubernetes-id: paulao-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paulao-2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paulao-2
        version: 0.0.1
        backstage.io/kubernetes-id: paulao-2
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"        
    spec:
      containers:
      - name: paulao-2
        image: webgo
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
