deployed_apps/paulao-2/base/paulao-2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paulao-2-service
  namespace: paulao-2
  annotations:
    external-dns.alpha.kubernetes.io/hostname: paulao-2.pauloponciano.digital
  labels:
    app: paulao-2
    version: 0.0.1
    backstage.io/kubernetes-id: paulao-2
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: paulao-2
